@@ -30,12 +30,10 @@ Sandbox_EN = {
     Sandbox_MoreTraits_GraveRobberChance_tooltip = "The % chance that a player with the Grave Robber trait will find extra loot on a zombie corpse. Chance is rounded down to nearest 0.1%",
     Sandbox_MoreTraits_GraveRobberGuaranteedLoot = "Grave Robber: Guaranteed Extra Loot",
     Sandbox_MoreTraits_GraveRobberGuaranteedLoot_tooltip = "How much guaranteed extra loot will Grave Robber's find on zombie corpses?<br>By default, a random value is determined. Increasing this value guarantees extra loot whenever loot is rolled.",
+	Sandbox_MoreTraits_IndefatigableOneUse = "Indefatigable One Use",
+	Sandbox_MoreTraits_IndefatigableOneUse_tooltip = "If true, Indefatigable trait can be used only once per character.<br>If false, it will recharge based on the option below.<br>Note: If false, it will cure zombification only once.",
     Sandbox_MoreTraits_IndefatigableRecharge = "Indefatigable Recharge",
-    Sandbox_MoreTraits_IndefatigableRecharge_tooltip = "After how many in-game days should the indefatigable ability recharge?",
-    Sandbox_MoreTraits_IndefatigableCuresInfection = "Indefatigable Cures Infection",
-    Sandbox_MoreTraits_IndefatigableCuresInfection_tooltip = "Should Indefatigable cure infection upon being used?<br>By default, Indefatigable does not cure zombification.<br>Note: Curing infection with Indefatigable will put it on twice the cooldown than normal.",
-    Sandbox_MoreTraits_IndefatigableCuresInfectionOnce = "Indefatigable Cures infection only once",
-    Sandbox_MoreTraits_IndefatigableCuresInfectionOnce_tooltip = "Should Indefatigable no longer cure infection if it cured once?<br>This setting only works if "Indefatigable Cures Infection" is turned on.",
+    Sandbox_MoreTraits_IndefatigableRecharge_tooltip = "After how many in-game days should the indefatigable ability recharge?<br>Note: This option will only work if "Indefatigable One Use" option is disabled.",
     Sandbox_MoreTraits_GordaniteEffectiveness = "Gordanite Effectiveness",
     Sandbox_MoreTraits_GordaniteEffectiveness_tooltip = "A percent value representing how effective the Gordanite trait makes players with Crowbars.<br>Setting this to 200% will make Gordanite twice as powerful.",
     Sandbox_MoreTraits_EvasiveChance = "Evasive Dodge Chance",
