@@ -70,20 +70,15 @@ option MoreTraits.GymGoerNoExerciseFatigue
 	type = boolean, default = true,
 	page = MoreTraits, translation = MoreTraits_GymGoerNoExerciseFatigue,
 }
+option MoreTraits.IndefatigableOneUse
+{
+	type = boolean, default = true,
+	page = MoreTraits, translation = MoreTraits_IndefatigableOneUse,
+}
 option MoreTraits.IndefatigableRecharge
 {
-	type = integer, min = 1, max = 30, default = 7,
+	type = integer, min = 7, max = 30, default = 7,
 	page = MoreTraits, translation = MoreTraits_IndefatigableRecharge,
-}
-option MoreTraits.IndefatigableCuresInfection
-{
-	type = boolean, default = false,
-	page = MoreTraits, translation = MoreTraits_IndefatigableCuresInfection,
-}
-option MoreTraits.IndefatigableCuresInfectionOnce
-{
-	type = boolean, default = false,
-	page = MoreTraits, translation = MoreTraits_IndefatigableCuresInfectionOnce,
 }
 option MoreTraits.GordaniteEffectiveness
 {
